Fix parentcommentpaginator wrt orphans

--- a/tcc/templates/tcc/list-comments.html
+++ b/tcc/templates/tcc/list-comments.html
@@ -46,7 +46,7 @@
   </div>
   {% endif %}
 
-  {% autopaginate comments as cs prefix='c', per_page=20 %}
+  {% autopaginate comments as cs prefix='c' %}
 
   <ul class="comments">
     <a name="comments"></a>
